--- a/index.html
+++ b/index.html
@@ -70,38 +70,38 @@
                     <div class="col-12 text-center pt-1 pb-5 mb-5 ">
                         <h2 class="display-2">Experiencia</h2>
                     </div>
-                    <div class="col-12 col-md-4 card border-0 pb-5">                        
+                    <div class="col-12 col-md-4 card border-0 bg-transparent pb-5">                        
                             <img src="./img/descarga.png" class="card-img-top w-100 " alt="...">
                             <div class="card-body">
                               <h5 class="card-title">DXC Technology</h5>
                               <h6 class="card-subtitle mb-2 text-muted">(2014 - Actual)</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Senior Software Developer</h6>
                               <ul class="list-group list-group-flush">                                
-                                <li class="list-group-item">Programacion PL-SQL</li>
-                                <li class="list-group-item">Optimización</li>                                
-                                <li class="list-group-item">Análisis de requerimientos</li>                                
-                                <li class="list-group-item">Base de datos Oracle</li>                            
-                                <li class="list-group-item">AWS</li>                            
+                                <li class="list-group-item bg-transparent">Programacion PL-SQL</li>
+                                <li class="list-group-item bg-transparent">Optimización</li>                                
+                                <li class="list-group-item bg-transparent">Análisis de requerimientos</li>                                
+                                <li class="list-group-item bg-transparent">Base de datos Oracle</li>                            
+                                <li class="list-group-item bg-transparent">AWS</li>                            
                               </ul>
                             </div>                          
                     </div>
-                    <div class="col-12 col-md-4 card border-0 pb-5">                            
-                        <img src="./img/hms.jpeg" class="card-img-top w-100" alt="...">
-                        <div class="card-body">
+                    <div class="col-12 col-md-4 card border-0 bg-transparent pb-5">                            
+                        <img src="./img/hms.png" class="card-img-top w-100" alt="...">
+                        <div class="card-body bg-transparent">
                           <h5 class="card-title">Health Management Solutions</h5>
                           <h6 class="card-subtitle mb-2 text-muted">(2014 - 2022)</h6>
                           <h6 class="card-subtitle mb-2 text-muted">Senior Oracle Developer</h6>
-                          <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Desarrollo en Oracle Forms</li>
-                            <li class="list-group-item">Programacion PL-SQL</li>
-                            <li class="list-group-item">Optimización</li>                         
-                            <li class="list-group-item">Base de datos Oracle</li>                            
+                          <ul class="list-group list-group-flush bg-transparent ">
+                            <li class="list-group-item bg-transparent">Desarrollo en Oracle Forms</li>
+                            <li class="list-group-item bg-transparent">Programacion PL-SQL</li>
+                            <li class="list-group-item bg-transparent">Optimización</li>                         
+                            <li class="list-group-item bg-transparent">Base de datos Oracle</li>                            
                           </ul>
                         </div>                          
                 </div>
-                <div class="col-12 col-md-4 card  border-0 pb-5">                            
-                    <img src="./img/uni.png" class="card-img-top w-100" alt="...">
-                    <div class="card-body">
+                <div class="col-12 col-md-4 card  border-0 bg-transparent pb-5">                            
+                    <img src="./img/uni.png" class="card-img-top w-100 bg-transparent" alt="...">
+                    <div class="card-body bg-transparent">
                       <h5 class="card-title">Univerdad Nacional de la Patagonia San Juan Bosco</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Profesor Talleres UPAMI</h6>
                       <p class="card-text">Dictado de los cursos de nivel inicial y avanzado de UPAMI .</p>
@@ -116,7 +116,7 @@
                     <div class="col-12 text-center pb-5 mb-5">
                         <h2 class=" display-2 text-center">Educación</h2>
                     </div>
-                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                    <div class="card mb-3 border-0 bg-transparent" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4 text-center">
                             <img src="./img/uni.png" class="img-fluid rounded-start" alt="...">
@@ -130,7 +130,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                    <div class="card mb-3  border-0 bg-transparent " style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4 text-center">
                             <img src="./img/uni.png" class="img-fluid rounded-start" alt="...">
@@ -152,24 +152,11 @@
                 <div class="row justify-content-evenly pt-5 pb-5 gap-2 ">
                     <div class="col-12 text-center pb-5 mb-5">
                         <h2 class=" display-2 text-center">Cursos y Certificaciones</h2>
-                    </div>
-                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                    </div>                 
+                    <div class="card mb-3  border-0 bg-transparent" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4 text-center">
-                            <img src="./img/UNS.png" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-8">
-                            <div class="card-body text-center">
-                              <h5 class="card-title">Curso de “Sistemas de Información como Herramienta de Negocio. Caso de Estudio: SAP”</h5>
-                              <p class="card-text">Universidad Nacional del Sur</p>                              
-                            </div>
-                          </div>
-                        </div>
-                    </div>
-                    <div class="card mb-3  border-0 " style="max-width: 540px;">
-                        <div class="row g-0">
-                          <div class="col-md-4 text-center">
-                            <img src="./img/aws_logo.png" class="img-fluid rounded-start" alt="...">
+                            <a  class="img-fluid rounded-start fa-brands fa-aws  fa-5x text-decoration-none " style="color: #333333;"></a>
                           </div>
                           <div class="col-md-8">
                             <div class="card-body text-center">
@@ -179,10 +166,10 @@
                           </div>
                         </div>
                     </div>  
-                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                    <div class="card mb-3  border-0 bg-transparent" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4 text-center">
-                            <img src="./img/aws_logo.png" class="img-fluid rounded-start" alt="...">
+                            <a  class="img-fluid rounded-start fa-brands fa-aws  fa-5x text-decoration-none " style="color: #333333;"></a>
                           </div>
                           <div class="col-md-8">
                             <div class="card-body text-center">
@@ -192,10 +179,10 @@
                           </div>
                         </div>
                     </div>    
-                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                    <div class="card mb-3  border-0 bg-transparent " style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4 text-center">
-                            <img src="./img/aws_logo.png" class="img-fluid rounded-start" alt="...">
+                            <a  class="img-fluid rounded-start fa-brands fa-aws  fa-5x text-decoration-none " style="color: #333333;"></a>
                           </div>
                           <div class="col-md-8">
                             <div class="card-body text-center">
@@ -205,10 +192,10 @@
                           </div>
                         </div>
                     </div>    
-                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                    <div class="card mb-3  border-0 bg-transparent" style="max-width: 540px;">
                         <div class="row g-0">
-                          <div class="col-md-4 text-center">
-                            <img src="./img/aws_logo.png" class="img-fluid rounded-start" alt="...">
+                          <div class="col-md-4 text-center">                           
+                            <a  class="img-fluid rounded-start fa-brands fa-aws  fa-5x text-decoration-none " style="color: #333333;"></a>
                           </div>
                           <div class="col-md-8">
                             <div class="card-body text-center">
@@ -218,7 +205,7 @@
                           </div>
                         </div>
                     </div>  
-                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                    <div class="card mb-3  border-0 bg-transparent" style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4 text-center">
                             <img src="./img/proidesa.png" class="img-fluid rounded-start" alt="...">
@@ -231,7 +218,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                    <div class="card mb-3  border-0 bg-transparent " style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4 text-center">
                             <img src="./img/proidesa.png" class="img-fluid rounded-start" alt="...">
@@ -244,7 +231,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                    <div class="card mb-3  border-0 bg-transparent " style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4 text-center">
                             <img src="./img/proidesa.png" class="img-fluid rounded-start" alt="...">
@@ -257,7 +244,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                    <div class="card mb-3  border-0 bg-transparent " style="max-width: 540px;">
                         <div class="row g-0">
                           <div class="col-md-4 text-center">
                             <img src="./img/utn.jpg" class="img-fluid rounded-start" alt="...">
