--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="col-12 col-md-4 card border-0 bg-transparent pb-5">                        
                             <img src="./img/descarga.png" class="card-img-top w-100 " alt="...">
-                            <div class="card-body">
+                            <div class="card-body bg-transparent">
                               <h5 class="card-title">DXC Technology</h5>
                               <h6 class="card-subtitle mb-2 text-muted">(2014 - Actual)</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Senior Software Developer</h6>
